--- a/views/fit.html
+++ b/views/fit.html
@@ -92,7 +92,7 @@
             </button>
         </div>
         <div class="hacer-pedidoDiv">
-            <button id="button-pedido">Hacer Pedido</button>
+            <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
         </div>
     </div>
 
@@ -142,23 +142,31 @@
             <div class="img-plan">
                 <h3 class="planTitle">Fit - Semana 1</h3>
                 <img src="../images/menuFit-min.jpg" width="300px" margin="10px" />
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
 
             <div class="img-plan">
                 <h3 class="planTitle">Fit - Semana 2</h3>
                 <img src="../images/menufit2-min.jpg" width="300px" />
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Fit - Semana 3</h3>
                 <img src="../images/menufit3-min.jpg" width="300px" />
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Fit - Semana 4</h3>
                 <img src="../images/menufit4-min.jpg" width="300px" height="424px" />
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
         </div>
     </section>
@@ -167,7 +175,7 @@
             Pancakes Proteicos
         </h2>
         <img src="../images/pancakesPRO.jpg" height="500vh" />
-        <h3>Pancakes elaborados a base de clara de huevo y proteína en polvo</h3>
+        
     </div>
 
     <!--Formulario de contacto-->
