--- a/views/gourmet.html
+++ b/views/gourmet.html
@@ -45,7 +45,7 @@
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
-            <li><a href="#h-us">Nosotros</a></li>
+            <li><a href="../index.html">Nosotros</a></li>
             <li><a href="#contacto-formulario">Contacto</a></li>
         </ul>
     </nav>
@@ -81,15 +81,15 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active " data-bs-interval="5000">
-                    <img src="./images/viandas-deli-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="../images/viandas-min.jpg" class="d-block  w-50 h-50 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Viandas Saludables</h5>
-                        <p class="p-us">Elegí el menú que más se adapte a tus objetivos.</p>
+                        <p class="p-us"></p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="./images/viandas2-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="../images/viandas2-min.jpg" class="d-block w-50 h-50 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hacé tu pedido</h5>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <img src="./images/viandas3-min.jpg" class="d-block w-75 rounded mx-auto d-block img-fluid"
+                    <img src="../images/viandas3-min.jpg" class="d-block w-50 h-50 rounded mx-auto d-block img-fluid"
                         alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hora de disfrutar!</h5>
@@ -117,114 +117,77 @@
             </button>
         </div>
         <div class="hacer-pedidoDiv">
-            <button id="button-pedido">Hacer Pedido</button>
+            <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
         </div>
     </div>
-    <section>
-        <div class="banner--bannerSecundary">
+
+     <!--Seccion de banner-->
+
+     <section>
+        <div class="banner">
             <p>Deli Rose</p>
         </div>
-    </section>
-
-    <!--Seccion de Nosotros e historia-->
-
-    <section>
-        <h2 id="h-us">Nuestra Historia</h2>
-        <div class="section-us">
-            <div class="us-div-imagen">
-                <img src="../images/palta.jpg" id="us-img">
-            </div>
-            <p class="p-us">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur,
-                tenetur at delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error
-                sequi magni natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-            </p>
-        </div>
-    </section>
+    </section>  
 
     <!--Seccion de Servicios-->
 
     <section id="servicio-seccion">
-        <h2 id="h-serv">Servicios</h2>
-
+        <h2 id="h-serv">Menú Gourmet </h2>
+    
         <!--camelCase-->
-        <div class="sectionServ">
-            <p class="p-us">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur,
-                tenetur at delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error
-                sequi magni natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at
-                delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni
-                natus numquam quibusdam.
+        <div class="sectionServ">            
+            <p class="p-us">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum, dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad dignissimos consectetur, tenetur at delectus quia maiores ipsum,dolorem, praesentium modi ducimus ex iste repellendus error sequi magni natus numquam quibusdam.
             </p>
-            <div class="us-div-imagen">
-                <img src="../images/salad3.jpg" style="width: 450px;">
-            </div>
+            <img src="../images/viandas-deli-min.jpg" style="width: 450px;">
         </div>
     </section>
-
+    
     <!--Seccion de Planes-->
-
+    
     <section>
         <h2 id="planes-h">Planes disponibles</h2>
-
+    
         <!--CamelCase-->
-
+    
         <div id="planesImg">
             <div class="img-plan">
-                <h3 class="planTitle">Fit</h3>
-                <img src="../images/menuFit-min.jpg" width="300px" margin="10px">
-                <div class="bu">
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <h3 class="planTitle">BC - Semana 1</h3>
+                <img src="../images/menuGourmet-min.jpg" width="300px" margin="10px">
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
-
+            
             <div class="img-plan">
-                <h3 class="planTitle">Keto</h3>
-                <img src="../images/menuKeto-min.jpg" width="300px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
-                </div>
-            </div>
-            <div class="img-plan">
-                <h3 class="planTitle">Bajas calorías</h3>
-                <img src="../images/menuBC-min.jpg" width="300px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <h3 class="planTitle">BC - Semana 2</h3>
+                <img src="../images/menuGourmet-min.jpg" width="300px">
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
             <div class="img-plan">
-                <h3 class="planTitle">Gourmet</h3>
-                <img src="../images/menuGourmet-min.jpg" width="300px" height="424px">
-                <div>
-                    <button class="button-pedidoPlan">Hacer Pedido</button>
+                <h3 class="planTitle">BC - Semana 3</h3>
+                <img src="../images/menuGourmet-min.jpg" width="300px">
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
+            </div>
+            <div class="img-plan">
+                <h3 class="planTitle">BC - Semana 4</h3>
+                <img src="../images/menuGourmet-min.jpg" width="300px" >
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
                 </div>
             </div>
         </div>
-
+    
     </section>
-    <div class="pancake-div" <>
-        <h2 class="h2-style" style="text-align: center; font-size: 30px;">Pancakes Proteicos</h2>
-        <video id="video-prueba" src="../images/delirose.mp4" width="640" height="480" controls autoplay muted></video>
+    <div class="d-image ">
+        <img id="img-center" src="../images/soloclick.jpg">
     </div>
 
     <!--Formulario de contacto-->
@@ -347,7 +310,7 @@
         <img src="/images/logo.jpg" id="logo-transform">
     </div>
         -->
-    <footer class="footer--color">
+    <footer class="footer">
         <h4>Seguinos en las redes!</h4>
         <div id="imgFooter">
             <a href="https://www.facebook.com/deliroseviandas/"> <img class="img-foot"
