--- a/views/keto.html
+++ b/views/keto.html
@@ -84,7 +84,7 @@
             </button>
           </div>
         <div class="hacer-pedidoDiv">
-          <button id="button-pedido">Hacer Pedido</button>
+            <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
         </div>
     </div>
 
@@ -126,23 +126,31 @@
             <div class="img-plan">
                 <h3 class="planTitle">Keto - Semana 1</h3>
                 <img src="../images/menuKeto-min.jpg" width="300px" margin="10px">
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
             
             <div class="img-plan">
                 <h3 class="planTitle">Keto - Semana 2</h3>
                 <img src="../images/menuKeto-min.jpg" width="300px">
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Keto - Semana 3</h3>
                 <img src="../images/menuKeto-min.jpg" width="300px">
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
             <div class="img-plan">
                 <h3 class="planTitle">Keto - Semana 4</h3>
                 <img src="../images/menuKeto-min.jpg" width="300px" height= "424px">
-                <button class="button-pedidoPlan">Hacer Pedido</button>
+                <div class="btn-planes">
+                    <a href="#contacto-formulario"><button id="button-pedido">Hacer Pedido</button></a>
+                </div>
             </div>
         </div>
 
