--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,93 @@ footer {
     width: 40%;
     line-height: 2rem;
     text-align-last: right; } }
+
+a:link, a:visited, a:active {
+  text-decoration: none;
+  color: white; }
+
+#cards-p {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr  1fr 1fr 1fr;
+  justify-content: center; }
+
+.box1 {
+  background-color: #918b8b;
+  height: 70vh;
+  margin: 1vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #ffff;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px; }
+
+.box2 {
+  background-color: #918b8b;
+  height: 70vh;
+  margin: 1vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #ffff;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px; }
+
+.box3 {
+  background-color: #918b8b;
+  height: 70vh;
+  margin: 1vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #ffff;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px; }
+
+.box4 {
+  background-color: #918b8b;
+  height: 70vh;
+  margin: 1vw;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #ffff;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px; }
+
+.box1:hover {
+  background-color: red;
+  cursor: pointer;
+  transform: scale(0.9);
+  font-size: 45px; }
+
+.box2:hover {
+  background-color: #9e8739;
+  cursor: pointer;
+  transform: scale(0.9); }
+
+.box3:hover {
+  background-color: #407c3c;
+  cursor: pointer;
+  transform: scale(0.9); }
+
+.box4:hover {
+  background-color: #1f9fea;
+  cursor: pointer;
+  transform: scale(0.9); }
+
+.d-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10%; }
+
+#img-center {
+  height: 80vh; }
+
+.btn-planes {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 2%; }
