--- a/scss/styleScss.scss
+++ b/scss/styleScss.scss
@@ -237,7 +237,8 @@ body{
 .h2-style{
     font-size: 40px;
     text-align: center;   
-    font-family: $fontPrimary
+    font-family: $fontPrimary;
+    padding-top: 5%;
 }
 
 /*Ejercicio de tablas*/
