--- a/views/fit.html
+++ b/views/fit.html
@@ -46,7 +46,7 @@
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
-            <li><a href="#h-us">Nosotros</a></li>
+            <li><a href="../index.html">Nosotros</a></li>
             <li><a href="#contacto-formulario">Contacto</a></li>
         </ul>
     </nav>
@@ -181,7 +181,7 @@
     <!--Formulario de contacto-->
 
     <section class="contacto-imagen" id="contacto-formulario">
-        <h2 class="h2-style">Contacto</h2>
+        <h2 class="h2-style">Contacto / Hacé tu pedido</h2>
         <div class="seccionContacto">
             <!--camelCase-->
 
