--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,8 @@ body {
 .h2-style {
   font-size: 40px;
   text-align: center;
-  font-family: "Bebas Neue", cursive; }
+  font-family: "Bebas Neue", cursive;
+  padding-top: 5%; }
 
 /*Ejercicio de tablas*/
 table {
