--- a/views/planes.html
+++ b/views/planes.html
@@ -33,10 +33,10 @@
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="planes.html">Planes</a>
                 <ul id="submenu">
-                    <li><a href="/views/fit.html">Fit Plan</a></li>
-                    <li><a href="/views/keto.html">Keto</a></li>
-                    <li><a href="/views/bc.html">Bajas calorias</a></li>
-                    <li><a href="/views/gourmet.html">Gourmet</a></li>
+                    <li><a href="fit.html">Fit Plan</a></li>
+                    <li><a href="keto.html">Keto</a></li>
+                    <li><a href="bc.html">Bajas calorias</a></li>
+                    <li><a href="gourmet.html">Gourmet</a></li>
                 </ul>
             </li>
             <li><a href="#servicio-seccion">Servicios</a></li>
@@ -50,7 +50,7 @@
 
     <section>
         <div class="banner">
-            <p>Descubrí nuestros planes!</p>
+            <p>Planes!</p>
         </div>
       </section>      
 
