--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@
   padding: 0;
   box-sizing: border-box; }
 
+/*
+html{
+    min-height: 100vh;
+    width: 100%;
+}
+*/
 .logo-h {
   justify-content: center;
   text-align: center; }
@@ -44,7 +50,9 @@
   z-index: 10; }
 
 body {
-  text-align: center; }
+  text-align: center;
+  min-height: 100vh;
+  width: 100%; }
 
 .nav {
   justify-content: center;
@@ -337,79 +345,119 @@ footer {
 }
 
 */
-/*        Media queries       */
-@media only screen and (max-width: 320px) {
-  #nav-id {
-    display: none; } }
-
-@media only screen and (max-width: 2560px) {
-  #nav-collapse {
-    display: none; } }
-
-@media only screen and (max-width: 426px) {
-  #nav-collapse {
-    display: flex; } }
-
-@media only screen and (max-width: 426px) and (min-width: 57px) {
-  #nav-div {
-    display: none; } }
-
-@media only screen and (max-width: 2560px) and (min-width: 427) {
-  #nav-div {
-    display: flex; } }
-
-@media only screen and (max-width: 426px) and (min-width: 57px) {
-  .section-us {
-    margin: 5%;
-    display: flex;
-    margin-bottom: 10%;
-    flex-direction: column; } }
-
-@media only screen and (max-width: 426px) and (min-width: 57px) {
-  #us-img {
-    width: 45vh; } }
-
-@media only screen and (min-width: 426px) and (max-width: 1024px) {
-  .us-div-imagen {
-    text-align: center; } }
-
-@media only screen and (min-width: 426px) and (max-width: 1024px) {
+@media only screen and (min-width: 320px) and (max-width: 426px) {
+  .banner {
+    height: 200px;
+    margin: 3%;
+    width: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Nautilus pompilius',cursive;
+    font-size: 90px;
+    color: white;
+    background-image: linear-gradient(to bottom right, #4affde 0%, #5b9dff 40%, #d06bff 60%, #ff34d2 100%);
+    background-size: 200% 200%;
+    animation: movingGradient 5s linear infinite alternate; }
   .section-us {
     display: flex;
-    margin: 5%;
     flex-direction: column;
-    margin-bottom: 10%;
-    text-align: center; } }
-
-@media only screen and (min-width: 426px) and (max-width: 1024px) {
+    margin: 5%;
+    margin-bottom: 10%; }
+  .section-us img {
+    width: 100%; }
   .sectionServ {
     display: flex;
-    margin: 5%;
-    flex-direction: column-reverse;
-    margin-bottom: 10%;
-    text-align: center; } }
-
-@media only screen and (min-width: 426px) and (max-width: 1024px) {
-  #planesImg {
-    display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    text-align: center; } }
-
-@media only screen and (min-width: 426px) and (max-width: 768px) {
+    margin: 5%;
+    margin-bottom: 15%;
+    align-items: center; }
+  .sectionServ img {
+    width: 100%; }
+  #planesImg {
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content: center; */
+    display: grid;
+    grid-auto-columns: max-content;
+    justify-content: center; }
+  .pancake-div {
+    display: grid;
+    justify-content: center;
+    margin-top: 10%;
+    /* grid-auto-columns: min-content; */ }
+  .pancake-div video {
+    width: max-content; }
   #formContact {
     flex-direction: column;
     padding: 5%;
     position: relative;
-    left: 555%;
+    left: 5%;
     margin-bottom: 5%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Urbanist", sans-serif;
     font-size: 20px;
-    width: 40%;
+    font-weight: 600;
+    width: 95%;
+    line-height: 2rem;
+    text-align-last: right;
+    color: white; } }
+
+@media only screen and (min-width: 427px) and (max-width: 768px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vw; }
+  .section-us {
+    display: grid;
+    margin: 5%;
+    margin-bottom: 10%; }
+  .us-div-imagen {
+    display: flex;
+    justify-content: center; }
+  .servicio-section {
+    display: grid;
+    margin: 5%;
+    margin-bottom: 10%; }
+  #h-serv {
+    text-align: center;
+    margin: 3%;
+    font-size: 35px;
+    padding-left: 0;
+    font-family: "Bebas Neue", cursive; }
+  .sectionServ {
+    display: inline-grid;
+    /* margin: 3%; */
+    margin-bottom: 15%;
+    align-items: center; }
+  #planesImg {
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* justify-content: center; */
+    display: grid;
+    grid-auto-columns: max-content;
+    justify-content: center; }
+  #formContact {
+    flex-direction: column;
+    padding: 5%;
+    position: relative;
+    left: 0;
+    margin-bottom: 5%;
+    font-family: "Urbanist", sans-serif;
+    font-size: 20px;
+    width: 100%;
     line-height: 2rem;
     text-align-last: right; } }
 
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  #planesImg {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; }
+  #planesImg .img-plan {
+    margin: 22px; } }
+
+/*  Media queries    */
 a:link, a:visited, a:active {
   text-decoration: none;
   color: white; }
@@ -419,6 +467,13 @@ a:link, a:visited, a:active {
   display: grid;
   grid-template-columns: 1fr  1fr 1fr 1fr;
   justify-content: center; }
+
+@media only screen and (min-width: 320px) and (max-width: 426px) {
+  #cards-p {
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center; } }
 
 .box1 {
   background-color: #918b8b;
@@ -452,6 +507,14 @@ a:link, a:visited, a:active {
   color: #ffff;
   font-family: "Bebas Neue", cursive;
   font-size: 30px; }
+
+@media only screen and (min-width: 320px) and (max-width: 426px) {
+  .box3 {
+    font-size: 25px; } }
+
+@media only screen and (min-width: 427px) and (max-width: 768px) {
+  .box3 {
+    font-size: 25px; } }
 
 .box4 {
   background-color: #918b8b;
