--- a/scss/styleScss.scss
+++ b/scss/styleScss.scss
@@ -5,6 +5,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*
+html{
+    min-height: 100vh;
+    width: 100%;
+}
+*/
+
 
 .logo-h{
     justify-content: center;
@@ -19,7 +26,8 @@
 
 body{
     text-align: center;   
-    
+    min-height: 100vh;
+    width: 100%;
 }
 
 .nav{
@@ -383,106 +391,148 @@ footer{
 
 */
 
-/*        Media queries       */
+         
 
-
-@media only screen and (max-width: 320px){
-    #nav-id{
-        display: none;
+@media only screen and (min-width: 320px) and (max-width:426px){
+    .banner {
+        height: 200px;
+        margin: 3%;
+        width: 100%;
+        display:  none;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Nautilus pompilius',cursive;
+        font-size: 90px;
+        color: white;
+        background-image: linear-gradient(to bottom right, #4affde 0%, #5b9dff 40%, #d06bff 60%, #ff34d2 100%);
+        background-size: 200% 200%;
+        animation: movingGradient 5s linear infinite alternate;
     }
-}
-
-@media only  screen and (max-width:2560px ) {
-    #nav-collapse{
-        display: none;
-    }
-}
-
-@media only  screen and (max-width:426px ) {
-    #nav-collapse{
-        display: flex;
-    }
-}
-
-@media only  screen and (max-width:426px) and (min-width:57px) {
-    #nav-div{
-        display: none;
-    }
-}
-
-@media only  screen and (max-width:2560px) and (min-width:427) {
-    #nav-div{
-        display: flex;
-    }
-}
-
-
-@media only  screen and (max-width:426px) and (min-width:57px) {
-    .section-us{
-        margin: 5%;
-        display: flex;
-        margin-bottom: 10%;
+        .section-us {
+            display: flex;
         flex-direction: column;
-    }
-}
-    
-@media only  screen and (max-width:426px) and (min-width:57px) {
-    #us-img{
-        width: 45vh;
-    }
-}
-
-@media only  screen and (min-width:426px) and (max-width:1024px) {
-    .us-div-imagen{
+        margin: 5%;
+        margin-bottom: 10%;
+        }
+        .section-us img {
+            width: 100%;
+        }
+        .sectionServ {
+            display: flex;
+            flex-direction: column;
+            margin: 5%;
+            margin-bottom: 15%;
+            align-items: center;
+        }
+        .sectionServ img {
+            width: 100%;
+        }
+        #planesImg {
+            /* display: flex; */
+            /* flex-direction: row; */
+            /* justify-content: center; */
+            display: grid;
+            grid-auto-columns: max-content;
+            justify-content: center;
+        }
+        .pancake-div {
+            display: grid;
+            justify-content: center;
+            margin-top: 10%;
+            /* grid-auto-columns: min-content; */
+        }
+        .pancake-div video {
+            width: max-content;
+        }
         
-        text-align: center;
-    }
+        #formContact {
+            flex-direction: column;
+            padding: 5%;
+            position: relative;
+            left: 5%;
+            margin-bottom: 5%;
+            font-family: "Urbanist", sans-serif;
+            font-size: 20px;
+            font-weight: 600;
+            width: 95%;
+            line-height: 2rem;
+            text-align-last: right;
+            color: white;
+        }
+              
 }
 
 
-@media only screen and (min-width:426px) and (max-width:1024px) {
-    .section-us{
-        display: flex;
-        margin: 5%;
-        flex-direction: column;
-        margin-bottom: 10%;
-        text-align: center;
-    }
+@media only screen and (min-width: 427px) and (max-width:768px){    
+            body  {
+                display:flex; flex-direction:column; justify-content:center;
+                min-height:100vw;
+              } 
+              
+              .section-us {
+                display: grid;
+                margin: 5%;
+                margin-bottom: 10%;
+            }
+            .us-div-imagen{
+                display: flex;
+                justify-content: center;
+              }
+              .servicio-section{
+                display: grid;
+                margin: 5%;
+                margin-bottom: 10%;
+              }
+              #h-serv {
+                text-align: center;
+                margin: 3%;
+                font-size: 35px;
+                padding-left: 0; 
+                font-family: "Bebas Neue", cursive;
+            }
+              .sectionServ {
+                display: inline-grid;
+                /* margin: 3%; */
+                margin-bottom: 15%;
+                align-items: center;
+            }
+
+
+            #planesImg {
+                /* display: flex; */
+                /* flex-direction: row; */
+                /* justify-content: center; */
+                display: grid;
+                grid-auto-columns: max-content;
+                justify-content: center;
+            }
+            #formContact {
+                flex-direction: column;
+                padding: 5%;
+                position: relative;
+                left: 0;
+                margin-bottom: 5%;
+                font-family: "Urbanist", sans-serif;
+                font-size: 20px;
+                width: 100%;
+                line-height: 2rem;
+                text-align-last: right;
+            }
 }
 
-@media only screen and (min-width:426px) and (max-width:1024px) {
-    .sectionServ{
-        display: flex;
-        margin: 5%;
-        flex-direction: column-reverse;
-        margin-bottom: 10%;
-        text-align: center;
-    }
-}
-@media only screen and (min-width:426px) and (max-width:1024px) {
-    #planesImg{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-content: center;
-        text-align: center;
-}
+@media only screen and (min-width: 769px) and (max-width:1024px) {
+    
+        #planesImg {
+            display: flex;            
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        #planesImg .img-plan {
+            margin: 22px;
+        }
 }
 
-@media only screen and (min-width:426px) and (max-width:768px){
-    #formContact{
-    flex-direction: column;
-    padding: 5%;
-    position: relative;
-    left: 555%;
-    margin-bottom: 5%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    width: 40%;
-    line-height:2rem;
-    text-align-last: right;
-    }
-}
+/*  Media queries    */
 
 a:link, a:visited, a:active {
 text-decoration: none;
@@ -497,6 +547,17 @@ $center-div: display flex, justify-content center, margin 5px;
     grid-template-columns: 1fr  1fr 1fr 1fr;       
     justify-content: center;    
 }
+
+@media only screen and (min-width: 320px) and (max-width:426px){
+#cards-p{
+    height:auto;       
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;    
+    }
+    
+}
+
 .box1{
     background-color: rgb(145, 139, 139);
     height: 70vh;
@@ -532,6 +593,18 @@ $center-div: display flex, justify-content center, margin 5px;
     font-family:$fontPrimary ;
     font-size: 30px;
 }
+
+@media only screen and (min-width: 320px) and (max-width:426px){
+    .box3{
+        font-size: 25px;
+    }
+}
+
+@media only screen and (min-width: 427px) and (max-width:768px){ 
+    .box3{
+        font-size: 25px;
+    }
+  }
 .box4{
     background-color: rgb(145, 139, 139);
     height: 70vh;
