--- a/views/keto.html
+++ b/views/keto.html
@@ -120,6 +120,7 @@
     <section>
         <h2 id="planes-h">Planes disponibles</h2>
 
+        <!--CamelCase-->
 
         <div id="planesImg">
             <div class="img-plan">
