--- a/scss/styleScss.scss
+++ b/scss/styleScss.scss
@@ -5,6 +5,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*
+html{
+    min-height: 100vh;
+    width: 100%;
+}
+*/
 
 
 .logo-h{
@@ -371,7 +377,19 @@ footer{
     from { background-position: 0 0}
     to   { background-position: 100% 100%}
 }
+/*
+#div-logo{
+    transform: rotate(180deg);
+    justify-content: center;
+    display: flex;
+}
+#logo-transform{
+    transform: scale(2,1);
+    width: 20%;
+    height: 20%;
+}
 
+*/
 
          /*  Media queries    */
 
@@ -474,13 +492,16 @@ footer{
             }
               .sectionServ {
                 display: inline-grid;
+                /* margin: 3%; */
                 margin-bottom: 15%;
                 align-items: center;
             }
 
 
             #planesImg {
-                
+                /* display: flex; */
+                /* flex-direction: row; */
+                /* justify-content: center; */
                 display: grid;
                 grid-auto-columns: max-content;
                 justify-content: center;
