--- a/views/bc.html
+++ b/views/bc.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Viandas, Viandas Saludables, Comida Saludable, Dieta, Fit">
     <meta name="description" content="Ahora cuidarte es más fácil, rápido y delicioso! Deli Rose se encarga de brindarte el plato que necesitás, cuando lo querés y más rico que nunca. Podés elegir el plan que más se adapte a tus objetivos y comenzar a cuidar tu alimentación para acercarte más a tus metas.">
-    <title>Viandas - Bajas calorías</title>    
+    <title>Viandas - Bajas calorías</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -49,7 +49,23 @@
             <li><a href="#contacto-formulario">Contacto</a></li>
         </ul>
     </nav>
- 
+    <!--
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-secondary p-4">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+        </div>
+    </div>
+    <nav class="navbar navbar-dark bg-secondary" id="nav-collapse">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
+    -->
 
     <!--Banner y botón para hacer pedido-->
 
@@ -228,6 +244,68 @@
         </div>
     </section>
 
+    <!--Ejemplo de uso de Grid-->
+    <!--
+<section class="grid-layout">
+    
+ <div class="caja">Producto 1</div>
+ <div class="caja">Producto 2</div>
+ <div class="caja">Producto 3</div>
+ <div class="caja">Producto 4</div>
+ <div class="caja">Producto 5</div>
+ <div class="caja">Producto 6</div>
+
+
+</section>
+-->
+
+    <!--Tabla a modo de ejemplo de productos-->
+    <!--
+        <div>
+            <table>
+                <tr>
+                    <th>Articulo</th>
+                    <th>Descripcion</th>
+                </tr>
+                <tr>
+                    <td>Fit Plan</td>
+                    <td>Desarrollado para atletas</td>              
+                </tr>
+                <tr>
+                    <td>Keto Plan</td>
+                    <td>Elaborado en base a la dieto KETO</td>
+                </tr>
+                <tr>
+                    <td>Bajas calorías</td>
+                    <td>Indicado para el descenso de peso</td>              
+                </tr>
+                <tr>
+                    <td>Gourmet</td>
+                    <td>Menu para disfrutar de unos platos deliciosos!</td>              
+                </tr>
+                <tr>
+                </tr>
+            </table>
+        </div>
+
+        
+        -->
+    <!--Ejemplo de lista-->
+    <!--
+        <div>
+            <h3>Precios</h3>
+            <ol class="list">
+                <li>Keto - Fit - Gourmet : $1900</li>
+                <li>Bajas calorías - Veggie : $1800</li>
+                <li>Pancakes Proteicos : $400</li>
+            </ol>
+        </div>
+        -->
+    <!--
+    <div id="div-logo">
+        <img src="/images/logo.jpg" id="logo-transform">
+    </div>
+        -->
     <footer class="footer">
         <h4>Seguinos en las redes!</h4>
         <div id="imgFooter">
